--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,8 +19,18 @@ IF( UNIX )
 ENDIF(UNIX)
 
 IF( WIN32 )
-	SET(CMAKE_CXX_FLAGS_DEBUG "/Od /openmp /W3")	
-	SET(CMAKE_CXX_FLAGS_RELEASE "/O2 /openmp /Oi /Ot /Og /W3")	
+	SET(CMAKE_CXX_FLAGS_DEBUG "/Od /openmp /W3 /Zi")	
+	SET(CMAKE_CXX_FLAGS_RELEASE "/O2 /openmp /Oi /Ot /W3 /Zi")	
+    SET(CMAKE_EXE_LINKER_FLAGS_DEBUG "/PROFILE")
+    SET(CMAKE_EXE_LINKER_FLAGS_RELEASE "/PROFILE")
+    IF( MSVC )
+        FOREACH( OUTPUTCONFIG ${CMAKE_CONFIGURATION_TYPES} )
+            STRING( TOUPPER ${OUTPUTCONFIG} OUTPUTCONFIG )
+            SET( CMAKE_RUNTIME_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${PROJECT_BINARY_DIR} )
+            SET( CMAKE_LIBRARY_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${PROJECT_BINARY_DIR} )
+            SET( CMAKE_ARCHIVE_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${PROJECT_BINARY_DIR} )
+        ENDFOREACH( OUTPUTCONFIG CMAKE_CONFIGURATION_TYPES )
+    ENDIF( MSVC )
 ENDIF( WIN32 )
 
 if(NOT CMAKE_BUILD_TYPE AND NOT CMAKE_CONFIGURATION_TYPES)
