--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,8 +21,8 @@ ENDIF(UNIX)
 IF( WIN32 )
 	SET(CMAKE_CXX_FLAGS_DEBUG "/Od /openmp /W3 /Zi")	
 	SET(CMAKE_CXX_FLAGS_RELEASE "/O2 /openmp /Oi /Ot /W3 /Zi")	
-    SET(CMAKE_EXE_LINKER_FLAGS_DEBUG "/PROFILE")
-    SET(CMAKE_EXE_LINKER_FLAGS_RELEASE "/PROFILE")
+#    SET(CMAKE_EXE_LINKER_FLAGS_DEBUG "/PROFILE")
+#    SET(CMAKE_EXE_LINKER_FLAGS_RELEASE "/PROFILE")
     IF( MSVC )
         FOREACH( OUTPUTCONFIG ${CMAKE_CONFIGURATION_TYPES} )
             STRING( TOUPPER ${OUTPUTCONFIG} OUTPUTCONFIG )
